--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -1,3 +1,16 @@
+.tasks__header .tasks__action a, .tasks__items .task__item .card__header .card__controls a {
+  padding: 7px;
+  border-radius: 50%;
+}
+@media (hover: hover) {
+  .tasks__header .tasks__action a:hover, .tasks__items .task__item .card__header .card__controls a:hover {
+    background-color: rgba(210, 210, 210, 0.137254902);
+  }
+}
+.tasks__header .tasks__action a:active, .tasks__items .task__item .card__header .card__controls a:active {
+  background-color: rgba(210, 210, 210, 0.2431372549);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,7 +18,6 @@
   outline: none;
   border: none;
 }
-
 
 a {
   text-decoration: none;
@@ -38,17 +50,16 @@ body {
   line-height: 130%;
   color: #3D3D3D;
 }
-
-.tasks__action {
+.tasks__header .tasks__action {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 10px;
 }
-.tasks__action img {
+.tasks__header .tasks__action img {
   width: 24px;
   height: auto;
 }
-.tasks__action button {
+.tasks__header .tasks__action button {
   width: 172px;
   height: 48px;
   display: flex;
@@ -60,37 +71,99 @@ body {
   font-family: inherit;
   cursor: pointer;
 }
-.tasks__action button span {
+.tasks__header .tasks__action button span {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #F5F5F5;
 }
-.tasks__action button img {
+.tasks__header .tasks__action button img {
   width: 24px;
   height: 24px;
+}
+.tasks__header .tasks__action button:active {
+  scale: 99%;
 }
 
 .tasks__items {
   display: flex;
   gap: 24px;
+  align-items: flex-start;
 }
-
-.task__item {
+.tasks__items .task__item:nth-child(1) {
   background-color: #EEF2FC;
-  padding: 50px 12px 12px;
+  box-shadow: 0px 1px 10px rgba(242, 113, 84, 0.1);
+  border: 1px solid #CAD9F6;
+}
+.tasks__items .task__item:nth-child(1) .task__item-header label {
+  color: #14367B;
+}
+.tasks__items .task__item:nth-child(2) {
+  background-color: #FFF6EB;
+  box-shadow: 0px 1px 10px rgba(255, 175, 71, 0.1);
+  border: 1px solid #FFE4C2;
+}
+.tasks__items .task__item:nth-child(2) .task__item-header label {
+  color: #8F4F00;
+}
+.tasks__items .task__item:nth-child(3) {
+  background-color: #FDF0EC;
+  box-shadow: 0px 1px 10px rgba(131, 195, 140, 0.1);
+  border: 1px solid #FAD0C6;
+}
+.tasks__items .task__item:nth-child(3) .task__item-header label {
+  color: #81290E;
+}
+.tasks__items .task__item {
+  padding: 12px;
   border-radius: 12px;
 }
-.task__item .task__item-header {
+.tasks__items .task__item .task__item-header {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-bottom: 12px;
 }
-.task__item .task__item-header label {
+.tasks__items .task__item .task__item-header label {
   font-weight: 500;
   font-size: 20px;
   line-height: 130%;
-  color: #14367B;
+}
+.tasks__items .task__item .card {
+  padding: 11px 12px;
+  border: 1px solid #CAD9F6;
+  border-radius: 8px;
+  background: #FFFFFF;
+}
+.tasks__items .task__item .card:not(:last-child) {
+  margin-bottom: 12px;
+}
+.tasks__items .task__item .card__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 12px;
+}
+.tasks__items .task__item .card__header > img {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.tasks__items .task__item .card__header .card__controls {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.tasks__items .task__item .card__header .card__controls img {
+  width: 24px;
+  height: 24px;
+}
+.tasks__items .task__item .card .card__content {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  color: #5C5C5C;
 }
 
 /*# sourceMappingURL=style.css.map */
