fixed footer padding

--- a/Kronix/css/style.css
+++ b/Kronix/css/style.css
@@ -407,7 +407,7 @@ footer .agency__items {
     padding: 0 50px;
     padding-bottom: 55px;
     border-bottom: 1px solid #404040;
-    margin-bottom: 26px;
+    /* margin-bottom: 26px; */
 }
 
 footer .agency__item .logo {
@@ -466,7 +466,7 @@ footer .footer__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 50px 35px 50px;
+    /* padding: 0px 50px 35px 50px; */
 }
 
 
@@ -475,7 +475,10 @@ footer .footer__nav {
     display: flex;
     align-items: center;
     gap: 70px;
-    padding-bottom: 35px;
+    /* padding-bottom: 35px; */
+    /* min-height: 60px; */
+    padding: 26px 0px 35px 0px;
+    /* margin-bottom: 10px; */
 }
 
 .footer__nav ul {
