contact-form design

--- a/contactForm/css/style.css
+++ b/contactForm/css/style.css
@@ -16,9 +16,7 @@ body {
   min-height: 100vh; */
 }
 
-/* .contact__form-inner {
-  
-} */
+
 
 .contact__form-header {
   margin-bottom: 50px;
@@ -45,6 +43,8 @@ h1 {
   padding: 10px;
 }
 
+
+
 .box {
   display: flex;
   background: #FFFFFF;
@@ -57,6 +57,30 @@ h1 {
   border-radius: 10px;
   padding: 40px 0px 35px 40px;
   flex: 1 1 41%;
+  position: relative;
+  overflow: hidden;
+}
+
+.box__info::before {
+  content: '';
+  position: absolute;
+  top: -3%;
+  right: -11%;
+  width: 138px;
+  height: 138px;
+  border-radius: 50%;
+  background: rgba(255, 249, 249, 0.13);
+}
+
+.box__info::after {
+  content: '';
+  position: absolute;
+  bottom: -13%;
+  right: -19%;
+  width: 269px;
+  height: 269px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.12);
 }
 
 .box__info-header h2 {
@@ -255,4 +279,19 @@ fieldset>textarea[id="message"]::placeholder {
 
 .form__btn-cover button[type="submit"]:active {
   transform: scale(99%);
+}
+
+.box form {
+  position: relative;
+}
+
+.box form::after {
+  content: '';
+  position: absolute;
+  width: 240px;
+  height: 112px;
+  background: url(../img/decore.svg) no-repeat center center / cover;
+     bottom: 0%;
+    right: -2%;
+
 }
